# limo

./: .gitignore  README.md
config/: fastdds_udp.xml  limo_mocap_nav2.launch.py  mapMTR5.pgm  mapMTR5.yaml  nav2.yaml  slam_params.yaml
config/optitrack/: Calibration_Zakaria.cal  Limo.motive
data/run1_mocap/: metadata.yaml
docs/: CONTROL_DAILY.md  CONTROL_SETUP.md  DEVICE_SETUP.md  NAVIGATION.md  OPTITRACK_NAV2_DAILY.md  OPTITRACK_NAV2_PROJECT.md  OPTITRACK_NAV2_SETUP.md  README.md  SETUP.md  SLAM.md
docs/limo_fix/fix_bundle/docs/: NAVIGATION.md  WANDERING.md
docs/readme_docs_update/docs/: TUTORIAL.md
matlab/analysis/: analyze_runs.m
matlab/control/: build_limo_control_model.m  limo_ctrl_params.m
matlab/examples/: example1.m
matlab/goals/: limo_connect.m  limo_goal.m  limo_state.m  send_route_action.m  send_route_goalpose.m
matlab/perception/: README.md  limo_lidar_demo.m  limo_lidar_obstacle.m
matlab/setup/: gen_nav2_msgs.m
src/limo_nav/: package.xml  setup.cfg  setup.py
src/limo_nav/limo_nav/: wandering.py
src/mocap_localization/: install_mocap_localization.sh  package.xml  setup.cfg  setup.py
src/mocap_localization/docker/: Dockerfile
src/mocap_localization/launch/: mocap_localization.launch.py
src/mocap_localization/mocap_localization/: mocap_map_odom.py
